--- a/src/styles.css
+++ b/src/styles.css
@@ -5,32 +5,47 @@
 	position: relative;
 }
 :root {
-	--rosewater: hsl(10, 58%, 90%);
-	--flamingo: hsl(0, 58%, 86%);
-	--pink: hsl(316, 74%, 85%);
-	--mauve: hsl(267, 83%, 80%);
-	--red: hsl(351, 74%, 73%);
-	--maroon: hsl(355, 71%, 77%);
-	--peach: hsl(21, 86%, 73%);
-	--yellow: hsl(40, 70%, 78%);
-	--green: hsl(105, 48%, 72%);
-	--teal: hsl(171, 47%, 69%);
-	--sky: hsl(171, 47%, 69%);
-	--sapphire: hsl(199, 66%, 69%);
-	--blue: hsl(220, 83%, 75%);
-	--lavender: hsl(234, 82%, 85%);
-	--text: hsl(227, 68%, 88%);
-	--subtext1: hsl(228, 39%, 80%);
-	--subtext0: hsl(227, 27%, 72%);
-	--overlay2: hsl(228, 20%, 65%);
-	--overlay1: hsl(228, 15%, 57%);
-	--overlay0: hsl(230, 12%, 49%);
-	--surface2: hsl(230, 14%, 41%);
-	--surface1: hsl(231, 16%, 34%);
-	--surface0: hsl(230, 19%, 26%);
-	--base: hsl(232, 23%, 18%);
-	--mantle: hsl(233, 23%, 15%);
-	--crust: hsl(236, 23%, 12%);
+	--d-rosewater: hsl(10, 56%, 91%);
+	--d-flamingo: hsl(0, 59%, 88%);
+	--d-pink: hsl(316, 72%, 86%);
+	--d-mauve: hsl(267, 84%, 81%);
+	--d-red: hsl(343, 81%, 75%);
+	--d-maroon: hsl(350, 65%, 77%);
+	--d-peach: hsl(23, 92%, 75%);
+	--d-yellow: hsl(41, 86%, 83%);
+	--d-green: hsl(115, 54%, 76%);
+	--d-teal: hsl(170, 57%, 73%);
+	--d-sky: hsl(189, 71%, 73%);
+	--d-sapphire: hsl(199, 76%, 69%);
+	--d-blue: hsl(217, 92%, 76%);
+	--d-lavender: hsl(232, 97%, 85%);
+	--d-text: hsl(226, 64%, 88%);
+	--d-subtext: hsl(228, 24%, 72%);
+	--d-overlay: hsl(231, 11%, 47%);
+	--d-surface: hsl(237, 16%, 23%);
+	--d-base: hsl(240, 21%, 15%);
+	--d-crust: hsl(240, 23%, 9%);
+
+	--rosewater: hsl(11, 59%, 67%);
+	--flamingo: hsl(0, 60%, 67%);
+	--pink: hsl(316, 73%, 69%);
+	--mauve: hsl(266, 85%, 58%);
+	--red: hsl(347, 87%, 44%);
+	--maroon: hsl(355, 76%, 59%);
+	--peach: hsl(22, 99%, 52%);
+	--yellow: hsl(35, 77%, 49%);
+	--green: hsl(109, 58%, 40%);
+	--teal: hsl(183, 74%, 35%);
+	--sky: hsl(197, 97%, 46%);
+	--sapphire: hsl(189, 70%, 42%);
+	--blue: hsl(220, 91%, 54%);
+	--lavender: hsl(231, 87%, 72%);
+	--text: hsl(234, 16%, 35%);
+	--subtext: hsl(233, 10%, 47%);
+	--overlay: hsl(230, 12%, 49%);
+	--surface: hsl(228, 11%, 65%);
+	--base: hsl(220, 23%, 95%);
+	--crust: hsl(220, 21%, 89%);
 }
 html,
 body {
