--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -53,6 +53,10 @@
 	--step-3: clamp(1.7rem, calc(1.5rem + 1.2vw), 2.4rem);
 	--step-4: clamp(2rem, calc(1.7rem + 1.7vw), 3rem);
 	--step-5: clamp(2.5rem, calc(2rem + 2.3vw), 3.8rem);
+	--step-6: clamp(3rem, calc(2.3rem + 3.1vw), 4.8rem);
+	--step-7: clamp(3.6rem, calc(2.8rem + 4.1vw), 6rem);
+	--step-8: clamp(4.3rem, calc(3.2rem + 5.5vw), 7.5rem);
+	--step-9: clamp(5.2rem, calc(3.7rem + 7.2vw), 9.3rem);
 }
 
 html,
