--- a/src/routes/(site)/style.scss
+++ b/src/routes/(site)/style.scss
@@ -1,3 +1,19 @@
+blockquote,
+dd,
+dl,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+	margin: 0;
+}
+
 body {
 	min-height: 100vh;
 }
@@ -12,6 +28,11 @@ h2 {
 }
 h3 {
 	font-size: var(--step-2);
+}
+
+a {
+	text-decoration: none;
+	color: var(--mauve);
 }
 
 html:focus-within {
