--- a/src/routes/(site)/style.scss
+++ b/src/routes/(site)/style.scss
@@ -14,6 +14,18 @@ pre {
 	margin: 0;
 }
 
+menu,
+ol,
+ul {
+	list-style: none;
+	margin: 0;
+	margin-top: 0px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	margin-left: 0px;
+	padding: 0;
+}
+
 body {
 	min-height: 100vh;
 }
@@ -89,6 +101,10 @@ button {
 .hidden {
 	display: none !important;
 	visibility: hidden;
+}
+
+ul ::marker {
+	color: var(--yellow);
 }
 
 @layer base {
