feat: sketch out the structure for cheep

--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -24,6 +24,7 @@
 	--d-overlay: hsl(231, 11%, 47% / 35%);
 	--d-soverlay: hsl(231, 11%, 47%);
 	--d-surface: hsl(237, 16%, 23%);
+	--d-p-surface: hsl(228, 17%, 64%);
 	--d-base: hsl(240, 21%, 15%);
 	--d-crust: hsl(240, 23%, 9%);
 
@@ -46,6 +47,7 @@
 	--l-overlay: hsl(230, 12%, 49% / 35%);
 	--l-soverlay: hsl(230, 12%, 49%);
 	--l-surface: hsl(228, 11%, 65%);
+	--l-p-surface: hsl(227, 12%, 71%);
 	--l-base: hsl(220, 23%, 95%);
 	--l-crust: hsl(220, 21%, 89%);
 
