--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -24,7 +24,7 @@
 	--d-overlay: hsl(231, 11%, 47% / 35%);
 	--d-soverlay: hsl(231, 11%, 47%);
 	--d-surface: hsl(237, 16%, 23%);
-	--d-p-surface: hsl(228, 17%, 64%);
+	--d-p-surface: hsl(234, 13%, 31%);
 	--d-base: hsl(240, 21%, 15%);
 	--d-crust: hsl(240, 23%, 9%);
 
@@ -47,7 +47,7 @@
 	--l-overlay: hsl(230, 12%, 49% / 35%);
 	--l-soverlay: hsl(230, 12%, 49%);
 	--l-surface: hsl(228, 11%, 65%);
-	--l-p-surface: hsl(227, 12%, 71%);
+	--l-p-surface: hsl(225, 14%, 77%);
 	--l-base: hsl(220, 23%, 95%);
 	--l-crust: hsl(220, 21%, 89%);
 
@@ -86,6 +86,7 @@ html,
 	--overlay: var(--l-overlay);
 	--soverlay: var(--l-soverlay);
 	--surface: var(--l-surface);
+	--p-surface: var(--l-p-surface);
 	--base: var(--l-base);
 	--crust: var(--l-crust);
 
@@ -112,6 +113,7 @@ html,
 	--overlay: var(--d-overlay);
 	--soverlay: var(--d-soverlay);
 	--surface: var(--d-surface);
+	--p-surface: var(--d-p-surface);
 	--base: var(--d-base);
 	--crust: var(--d-crust);
 
