--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -130,26 +130,22 @@ html,
 	}
 }
 
-html,
-body {
-	box-sizing: inherit;
-	position: inherit;
-	margin: 0;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 html {
 	accent-color: var(--yellow);
 	background: var(--base);
 	color: var(--text);
 	text-rendering: optimizeSpeed;
-	line-height: 1;
 	tab-size: 4;
 	font-feature-settings: normal;
 	transition: background-color 150ms ease-out;
+	margin: 0;
+	line-height: 1.5;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
+	box-sizing: inherit;
+	position: inherit;
 	line-height: inherit;
 }
