--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -21,7 +21,7 @@
 	--d-lavender: hsl(232, 97%, 85%);
 	--d-text: hsl(226, 64%, 88%);
 	--d-subtext: hsl(227, 35%, 80%);
-	--d-overlay: hsl(231, 11%, 47% / 35%);
+	--d-overlay: hsl(231, 11%, 47%);
 	--d-surface: hsl(237, 16%, 23%);
 	--d-p-surface: hsl(234, 13%, 31%);
 	--d-base: hsl(240, 21%, 15%);
@@ -40,12 +40,12 @@
 	--l-sky: hsl(197, 97%, 46%);
 	--l-sapphire: hsl(189, 70%, 42%);
 	--l-blue: hsl(220, 91%, 54%);
-	--l-lavender: hsl(231, 87%, 72%);
+	--l-lavender: hsl(231, 97%, 72%);
 	--l-text: hsl(234, 16%, 35%);
 	--l-subtext: hsl(233, 13%, 41%);
-	--l-overlay: hsl(230, 12%, 49% / 35%);
-	--l-surface: hsl(228, 11%, 65%);
-	--l-p-surface: hsl(225, 14%, 77%);
+	--l-overlay: hsl(230, 12%, 49%);
+	--l-surface: hsl(223, 16%, 83%);
+	--l-p-surface: hsl(225, 14%, 77%, 90%);
 	--l-base: hsl(220, 23%, 95%);
 	--l-crust: hsl(220, 21%, 89%);
 
