--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -138,8 +138,18 @@ html {
 	padding: 0;
 	line-height: 1.5;
 	overflow-x: hidden;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family:
+		system-ui,
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Oxygen,
+		Ubuntu,
+		Cantarell,
+		'Open Sans',
+		'Helvetica Neue',
+		sans-serif;
 }
 
 @mixin scrollbars(
